--- a/operatingTable.html
+++ b/operatingTable.html
@@ -5,70 +5,51 @@
 <link rel="stylesheet" href="view-source:http://tatyanahjula.com/web/loremipsums//css/reset.css">
 <link rel="stylesheet" href="css/monsterStyles.css">
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
- <script src="js/monsterMaker.js" type="text/javascript"></script>
+<script src="js/monsterMaker.js" type="text/javascript"></script>
 </head>
 
 <body>
 <div class="container">
 
 <!-- BEGIN THE SclassEBAR ACCORDION -->
-    <dl class="accordion">
+    <dl class="accordion col-1thrids">
         <dt><a href="">Monster Menu</a></dt>
-            <dd>
-              <dt><a href="">Head</a></dt>
-              <dd>
-                <div class="m-head m1-head alignleft" data-class="m1-head"></div>
-                <div class="m-head m2-head alignleft" data-class="m2-head"></div>
-                <div class="m-head m3-head alignleft" data-class="m3-head"></div>
-                <div class="m-head m4-head alignleft" data-class="m4-head"></div>
-                <div class="m-head m5-head alignleft" data-class="m5-head"></div>
-                <div class="m-head m6-head alignleft" data-class="m6-head"></div>
-              </dd>
-              <dt><a href="">Body</a></dt>
-              </dd>
-                <div class="m-body m1-body alignleft" data-class="m1-body"></div>
-                <div class="m-body m2-body alignleft" data-class="m2-body"></div>
-                <div class="m-body m3-body alignleft" data-class="m3-body"></div>
-                <div class="m-body m4-body alignleft" data-class="m4-body"></div>
-                <div class="m-body m5-body alignleft" data-class="m5-body"></div>
-                <div class="m-body m6-body alignleft" data-class="m6-body"></div>
-              </dd>
+        <dd>
+          <dt><a href="">Head</a></dt>
+          <dd>
+            <div class="m-head m1-head col-half" data-class="m1-head"></div>
+            <div class="m-head m2-head col-half" data-class="m2-head"></div>
+            <div class="m-head m3-head col-half" data-class="m3-head"></div>
+            <div class="m-head m4-head col-half" data-class="m4-head"></div>
+            <div class="m-head m5-head col-half" data-class="m5-head"></div>
+            <div class="m-head m6-head col-half" data-class="m6-head"></div>
           </dd>
-        <dt><a href="">Monster Menu</a></dt>
-            <dd>
-              <dt><a href="">Entr&#233;es</a></dt>
-              <dd>
-                <div class="m-food m1-food alignleft" data-class="m1-food"></div>
-                <div class="m-food m2-food alignleft" data-class="m2-food"></div>
-                <div class="m-food m3-food alignleft" data-class="m3-food"></div>
-                <div class="m-food m4-food alignleft" data-class="m4-food"></div>
-                <div class="m-food m5-food alignleft" data-class="m5-food"></div>
-                <div class="m-food m6-food alignleft" data-class="m6-food"></div>
-            </dd>
-        <dt><a href="">Sides</a></dt>
-              <dd>
-                <div class="m-food m1-food alignleft" data-class="m1-food"></div>
-                <div class="m-food m2-food alignleft" data-class="m2-food"></div>
-                <div class="m-food m3-food alignleft" data-class="m3-food"></div>
-                <div class="m-food m4-food alignleft" data-class="m4-food"></div>
-                <div class="m-food m5-food alignleft" data-class="m5-food"></div>
-                <div class="m-food m6-food alignleft" data-class="m6-food"></div>
-            </dd>
-        </dd>   
-        <dt><a href="">Beverages</a></dt>
-              <dd>
-                <div class="m-food m1-food alignleft" data-class="m1-food"></div>
-                <div class="m-food m2-food alignleft" data-class="m2-food"></div>
-                <div class="m-food m3-food alignleft" data-class="m3-food"></div>
-                <div class="m-food m4-food alignleft" data-class="m4-food"></div>
-                <div class="m-food m5-food alignleft" data-class="m5-food"></div>
-                <div class="m-food m6-food alignleft" data-class="m6-food"></div>
-            </dd>
-        </dd> 
+          <dt><a href="">Body</a></dt>
+          <dd>
+            <div class="m-body m1-body col-half" data-class="m1-body"></div>
+            <div class="m-body m2-body col-half" data-class="m2-body"></div>
+            <div class="m-body m3-body col-half" data-class="m3-body"></div>
+            <div class="m-body m4-body col-half" data-class="m4-body"></div>
+            <div class="m-body m5-body col-half" data-class="m5-body"></div>
+            <div class="m-body m6-body col-half" data-class="m6-body"></div>
+          </dd>
+    </dd>
+      <dt><a href="">Diner Menu</a></dt>
+      <dd>
+        <dt><a href="">Entree</a></dt>
+        <dd>
+            <div class="m-food m1-food col-half" data-class="m1-food"></div>
+            <div class="m-food m2-food col-half" data-class="m2-food"></div>
+            <div class="m-food m3-food col-half" data-class="m3-food"></div>
+            <div class="m-food m4-food col-half" data-class="m4-food"></div>
+            <div class="m-food m5-food col-half" data-class="m5-food"></div>
+            <div class="m-food m6-food col-half" data-class="m6-food"></div>
+        </dd>
+      </dd>
     </dl>
 <!-- END THE SclassEBAR ACCORDION -->
 <!-- BEGIN THE OPERATING TABLE -->
-    <div class="operatingTable">
+    <div class="operatingTable col-2thrids">
 <!-- BEGIN MONSTER HEAD -->
         <div id="mHead" class="mBlank">
         </div>
