Second Draft: A lil bit of styling

--- a/operatingTable.html
+++ b/operatingTable.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="view-source:http://tatyanahjula.com/web/loremipsums//css/reset.css">
 <link rel="stylesheet" href="css/monsterStyles.css">
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
 <script src="js/monsterMaker.js" type="text/javascript"></script>
 </head>
 
@@ -12,7 +13,7 @@
 <div class="container">
 
 <!-- BEGIN THE SclassEBAR ACCORDION -->
-    <dl class="accordion col-1thrids">
+    <dl class="accordion col-half">
         <dt><a href="">Monster Menu</a></dt>
         <dd>
           <dt><a href="">Head</a></dt>
@@ -49,7 +50,7 @@
     </dl>
 <!-- END THE SclassEBAR ACCORDION -->
 <!-- BEGIN THE OPERATING TABLE -->
-    <div class="operatingTable col-2thrids">
+    <div class="operatingTable col-half">
 <!-- BEGIN MONSTER HEAD -->
         <div id="mHead" class="mBlank">
         </div>
