--- a/operatingTable.html
+++ b/operatingTable.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="view-source:http://tatyanahjula.com/web/loremipsums//css/reset.css">
 <link rel="stylesheet" href="css/monsterStyles.css">
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="js/monsterMaker.js" type="text/javascript"></script>
 </head>
 
