Third Draft: Working Drag and Drop

--- a/operatingTable.html
+++ b/operatingTable.html
@@ -61,6 +61,14 @@
 <!-- END MONSTER BODY -->
 <!-- BEGIN MONSTER FOOD -->        
         <div id="mFood" class="mBlank">
+            <div id="entree">
+            </div>
+            <div id="side1">
+            </div>
+            <div id="side2">
+            </div>
+            <div id="beverage">
+            </div>
         </div>
 <!-- END MONSTER FOOD -->
 	</div>
