Third Draft: Added Images

--- a/operatingTable.html
+++ b/operatingTable.html
@@ -18,7 +18,7 @@
         <dd>
           <dt><a href="">Head</a></dt>
           <dd>
-            <div class="m-head m1-head col-half" data-class="m1-head"></div>
+            <div class="m-head m1-head alignleft" data-class="m1-head"></div>
             <div class="m-head m2-head col-half" data-class="m2-head"></div>
             <div class="m-head m3-head col-half" data-class="m3-head"></div>
             <div class="m-head m4-head col-half" data-class="m4-head"></div>
@@ -61,14 +61,14 @@
 <!-- END MONSTER BODY -->
 <!-- BEGIN MONSTER FOOD -->        
         <div id="mFood" class="mBlank">
-            <div id="entree">
+            <!--<div id="entree">
             </div>
             <div id="side1">
             </div>
             <div id="side2">
             </div>
             <div id="beverage">
-            </div>
+            </div>-->
         </div>
 <!-- END MONSTER FOOD -->
 	</div>
