--- a/operatingTable.html
+++ b/operatingTable.html
@@ -2,18 +2,29 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Untitled Document</title>
-<link rel="stylesheet" href="view-source:http://tatyanahjula.com/web/loremipsums//css/reset.css">
-<link rel="stylesheet" href="css/monsterStyles.css">
+<link rel="stylesheet" href="css/reset.css" />
+<link rel="stylesheet" href="css/monsterStyles.css" />
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="js/monsterMaker.js" type="text/javascript"></script>
 </head>
 
 <body>
-<div class="container">
-
-<!-- BEGIN THE SclassEBAR ACCORDION -->
-    <dl class="accordion col-half">
+<!-- BEGIN PAGE HEADER -->
+<header>
+    <h1>Diner Monsters</h1>
+<!-- BEGIN GAME UI -->
+    <nav  class="container alignright">
+        <ul>
+            <li>Add</li>
+            <li>Save</li>
+            <li><a class="share-fb" href="#">Facebook</a></li>
+            <li>Reset</li>
+        </ul>
+    </nav>
+<!-- END GAME UI -->
+<!-- BEGIN SIDEEBAR ACCORDION -->
+    <dl class="accordion col-1thrids">
         <dt><a href="">Monster Menu</a></dt>
         <dd>
           <dt><a href="">Head</a></dt>
@@ -48,9 +59,14 @@
         </dd>
       </dd>
     </dl>
-<!-- END THE SclassEBAR ACCORDION -->
+<!-- END SIDEBAR ACCORDION -->    
+</header>
+<!-- END PAGE HEADER -->
+<!-- BEGIN MAIN CONTENT AREA -->
+<div class="operatingtable">
+<!-- BEGIN MAIN GAME -->
 <!-- BEGIN THE OPERATING TABLE -->
-    <div class="operatingTable col-half">
+    <div id="m1">
 <!-- BEGIN MONSTER HEAD -->
         <div id="mHead" class="mBlank">
         </div>
@@ -74,7 +90,10 @@
 	</div>
 <!-- END THE OPERATING TABLE -->
 
+
+
 </div>
+<!-- END MAIN GAME -->
 
 </body>
 </html>
